# MrUDP

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile.def  Makefile.project  README.md
.github/workflows/: build_cmake.yml
MrUDP.xcodeproj/: project.pbxproj
MrUDP.xcodeproj/xcshareddata/xcschemes/: MrUDP-Tests.xcscheme  MrUDP-iOS.xcscheme  MrUDP.xcscheme
examples/: Echo.h  EchoClient.c  EchoClient.cpp  EchoServer.c  EchoServer.cpp  Platform.h  Run.cpp
mrudp/: Base.cpp  Base.h  Config.h  Connection.cpp  Connection.h  Crypto.cpp  Crypto.h  Handshake.cpp  Handshake.h  Handshake_Options.cpp  Handshake_Options.h  Implementation.h  NetworkPath.cpp  NetworkPath.h  Packet.cpp  Packet.h  Packet.inl  Proxy.cpp  Proxy.hpp  Scheduler.cpp  Scheduler.h  Service.cpp  Service.h  Socket.cpp  Socket.h  Statistics.cpp  Statistics.h  Types.cpp  Types.h  mrudp.cpp  mrudp.h  mrudp.hpp  mrudp_proxy.cpp  mrudp_proxy.h  mrudp_proxy.hpp
mrudp/_remove/: Handshake_Proxy.cpp  Handshake_Proxy.h
mrudp/_remove/proxy/: ProxyID.h  Transformer.cpp  Transformer.h
mrudp/base/: CircularBuffer.hpp  Core.h  Linux.h  Log.h  Misc.h  Mutex.h  Mutex_.h  Pack.h  Ptr.h  Random.h  SizedVector.hpp  Thread.h  debug_assert.h  mem_copy.hpp  small_copy.hpp
mrudp/base/detail/: Array.h  CircularBuffer.hpp  Log.h  Mutex.h  Ptr.h  Random.h  SimpleInPlaceArray.hpp  SizedVector.hpp  debug_assert.h  mem_copy.hpp  small_copy.hpp
mrudp/connection/: Probe.cpp  Probe.h
mrudp/crypto/: Crypto.cpp  Crypto.h  Receiver.h  Sender.cpp  Sender.h
mrudp/imp/: Asio.cpp  Asio.h  AsioTesting.cpp  AsioTesting.h  BoostAsio.h  Crypto.cpp  Crypto.h  Crypto.inl  CryptoOpenSSL.cpp  UVW.h
mrudp/obsolete/: HandshakeA.cpp  HandshakeA.h
mrudp/proxy/: Proxy+Test.cpp  Proxy.cpp  Proxy.h  ProxyID.h  Transformer.cpp  Transformer.h
mrudp/receiver/: ReceiveQueue.cpp  ReceiveQueue.h  Receiver.cpp  Receiver.h  UnreliableReceiveQueue.cpp  UnreliableReceiveQueue.h
mrudp/sender/: IDGenerator.h  IDGenerator.inl  RTT.h  Retrier.cpp  Retrier.h  SendIDGenerator.cpp  SendIDGenerator.h  SendQueue.cpp  SendQueue.h  Sender.cpp  Sender.h  WindowSize.h
mrudp/socket/: Drop.h
mrudp_proxy/: Makefile.project  main.cpp
tests/: Basics.cpp  Common.h  ConnectionTimesOutAtBeginning.cpp  Connections.cpp  Crypto.cpp  InstrusiveAsioTests.cpp  LotsOfConnections.cpp  Makefile.project  MaximumTransferRate.cpp  NetworkPathChange.cpp  OneConnection.cpp  PacketID.cpp  Proxy.cpp  Run.cpp  StandaloneCore.cpp  StreamMuchoDato.cpp  Streams.cpp
